# open_memo

./: .agent_state.json  .dockerignore  AGENTS.md  Dockerfile  MEMORY.md  README.md  example_travily_2025june.py  final_status.json  package-lock.json  run_agent.py  setup_remediation.sh  step5_status.json  summary.txt  task.md  test_bash_import.py  test_import.py  test_skill_manager.py  verify_integration.py  verify_telemetry.py  verify_tree.py  waitlist-page
.agent/: .task_output
mcp_skill_agent/: .agent_state.json  .postcssrc  config.yaml  config_loader.py  debug_server_import.py  draft_main.py  file_server.py  index.html  list_longest_files.py  main.py  main_prod.py  main_v2.py  main_v3.py  mcp_server.py  memo_server.py  orchestrator.py  package.json  prompt.py  pyproject.toml  session_memory.py  skill_manager.py  skill_server.py  sop_agent.py  step_executor.py  task.md  telemetry.py  test_main.py  tsconfig.json  utils.py  validator.py  verifier.py  vite.config.ts
mcp_skill_agent/artifact-demo/: index.html''  package.json  pnpm-lock.yaml
mcp_skill_agent/cli/: commands.py
mcp_skill_agent/handler/: memory_handler.py  skill_discovery.py  skill_manager.py
mcp_skill_agent/mcp-demo/: bundle.html  index.html  package.json  pnpm-lock.yaml
mcp_skill_agent/mcp-demo-artifact/: package.json  pnpm-lock.yaml
mcp_skill_agent/mcp-demo-example/: index.html  package.json
mcp_skill_agent/mcp_react_app/: index.html  package.json  pnpm-lock.yaml
mcp_skill_agent/mcp_web_demo/: index.html  package.json  pnpm-lock.yaml
polymarket-bot/: Cargo.toml  config.yaml  dry_run.sh
(+605 files in other folders)
