[project]
name = "mcp-skill-agent"
version = "0.1.0"
description = "MCP-based skill agent with orchestration capabilities"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kent Chiu"}
]
keywords = ["mcp", "agent", "skills", "llm"]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-agent = "mcp_skill_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_skill_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
